2005-11-09  Aaron Bockover  <aaron@aaronbock.net>

	* src/AboutBox.cs: Added Ulas Sahin to authors credits, Marco Carvalho to
	translators credits
	* src/LogCore.cs: LogCore implements IEnumerable; added more helper methods
	for pushing different entry types; subclass LogEntry as WarningLogEntry,
	DebugLogEntry, ErrorLogEntry
	* src/LibraryTransactionManager.cs:
	* src/LibraryTransactions.cs:
	* src/AudioCdCore.cs:
	* src/PipelineProfile.cs:
	* src/Database.cs:
	* src/Core.cs:
	* src/RipTransaction.cs: Use the LogCore for debug logging instead 
	of DebugLog
	* src/DebugLog.cs: Removed 
	* src/Makefile.am: Added LogCoreViewer.cs, Removed DebugLog.cs
	* data/glade/player.glade:
	* src/PlayerInterface.cs: Add menu item for showing the LogCore Viewer
	* src/LogCoreViewer.cs: A dialog for viewing the LogCore entries
	* src/LibraryTransactions.cs (PlaylistLoadTransaction.Run): only
	raise track info if not null :)
	* src/PlayerInterface.cs (OnPlaylistUpdated): Got rid of custom time
	calculations in favour of TimeSpan; cleaned up a little
	* src/PlayerInterface.cs (OnLogCoreUpdated): Show a dialog for LogEntry
	entries that have ShowUser set; LogCore is now the preferred
	method of logging events and presenting errors/warnings to the user
	* src/LogCore.cs: Added more helper methods for making logging as easy
	as possible
	* src/LibraryTransactions.cs:
	* src/BurnCore.cs: Updated to reflect changes in LogCore
	* src/Core.cs: LogCore handles its own instance
	* src/AudioCdCore.cs: Use LogCore

2005-11-08  Aaron Bockover  <aaron@aaronbock.net>

	* src/Preferences.cs:
	* src/AboutBox.cs: Explicitly use GtkSharpBackports

2005-11-08  James Willcox  <snorp@snorp.net>

	* src/IpodCore.cs:
	* src/IpodTrackInfo.cs:

	Updated to use new ipod-sharp API.

2005-11-08  Aaron Bockover  <aaron@aaronbock.net>

	* src/AudioCdCore.cs (CreateDisk): Use anonymous method, but work 
	around mcs bug #76642

	* src/GtkSharpBackports/AboutDialogActivateLinkFunc.cs: